# aquaminerrrr

./: .gitignore  .travis.bash  .travis.yml  CMakeLists.txt  Makefile  build.bash  build_release.sh  docker-run.bash  setup_libs.bash  sign_release.bash
docs/: building.md  example.conf
include/: aqua.hpp  miner.hpp
src/: aqua.cpp  http.cpp  main.cpp  miner.cpp  thread.cpp
